gitops/components/external-secrets-config/network-policy/default-deny.networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-secrets-default-deny
  namespace: external-secrets
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
