gitops/components/external-secrets-config/network-policy/webhook.ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets-webhook-access
  namespace: external-secrets
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: external-secrets
      app.kubernetes.io/name: external-secrets-webhook
  enableDefaultDeny:
    ingress: false
    egress: false
  ingress:
    - fromEntities: [kube-apiserver]
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
